scripts/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: svc-minio
  namespace: kubeflow
spec:
  ports:
    - name: "9010"
      port: 9010
      targetPort: 9000
    - name: "9011"
      port: 9011
      targetPort: 9001
  selector:
    app: kfp-minio
