scripts/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-minio-ingress
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: svc-minio.local.exus.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-minio
                port:
                  number: 9011
